# opencrawl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
opencrawl/: __init__.py  spider.py
opencrawl/core/: __init__.py  structures.py
opencrawl/core/crawling/: __init__.py  base.py  crawler.py  proxies.py  structures.py
opencrawl/core/crawling/extractor/: __init__.py  base.py  content.py  html.py  markdown.py  structures.py
opencrawl/core/model/: __init__.py  base.py  generator.py  structures.py
