[project]
name = "opencrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.3.0",
    "pytest-playwright>=0.7.1",
    "ruff>=0.13.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
