[project]
name = "opencrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0",
    "numpy==2.2",
    "pre-commit>=4.3.0",
    "pytest-playwright>=0.7.1",
    "ruff>=0.13.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
