[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencrawll"
version = "0.1.3"
description = "High-performance web crawler and text generator with Transformers"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "accelerate>=1.3.0",
    "aiohttp>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "numpy==2.0.2",
    "pre-commit>=4.3.0",
    "pyproject-toml>=0.1.0",
    "pytest-playwright>=0.7.1",
    "ruff>=0.13.3",
    "selectolax>=0.4.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.66.0",
    "uvloop>=0.21.0",
    "vllm>=0.11.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
]

[tool.setuptools.packages.find]
where = ["opencrawl"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
